# crates

./: .gitignore  LICENSE  README.md  build.sh  crates.spec  dev-requirements.txt  launch.sh  main.py  pyproject.toml  requirements.txt
crates/: __init__.py  app.py  config.py  devices.py  paths.py  theme.py
crates/common/: audio_utils.py  file_utils.py  workers.py
crates/downloader/: engine.py  tab.py
crates/player/: engine.py  tab.py
crates/presets/: registry.py  schema.py
crates/resources/: style.qss
crates/sampler/: analyzer.py  chopper.py  classifier.py  effects.py  exporter.py  midi_exporter.py  pad_mapper.py  preset_engine.py  quality.py  tab.py  waveform_widget.py
crates/separator/: engine.py  tab.py
crates/spotify/: extractor.py  models.py
crates/widgets/: __init__.py  collapsible.py  pad_button.py
grabstem/: __init__.py  app.py  config.py
grabstem/common/: file_utils.py  workers.py
grabstem/downloader/: engine.py  tab.py
grabstem/player/: engine.py  tab.py
grabstem/presets/: presets.json  registry.py  schema.py
grabstem/resources/: style.qss
grabstem/sampler/: analyzer.py  chopper.py  classifier.py  effects.py  exporter.py  midi_exporter.py  pad_mapper.py  quality.py  tab.py  waveform_widget.py
grabstem/separator/: engine.py  tab.py
