[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crates"
version = "1.0.0"
description = "AI-powered sample pack factory — turn any song into an MPC-ready sample pack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "yt-dlp>=2024.1.0",
    "audio-separator>=0.25.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pedalboard>=0.9.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.6",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "pyloudnorm>=0.1.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
]

[project.scripts]
crates = "crates.app:run"

[tool.setuptools.packages.find]
include = ["crates*"]
